resources/styles/theme.css
input#searchBar {
    background-color: transparent !important;
}

th.el-table_1_column_1.is-leaf {
    display: none;
}
.el-table {
    background-color: transparent !important;
}

.el-table th, .el-table tr {
    background-color: transparent !important;
}

.el-table td, .el-table th.is-leaf {
    border: none !important;
    border-bottom: 1px solid rgba(167, 167, 167, 0.06) !important;
}

.el-table::before {
    height: 0px !important;
}

.el-table--enable-row-hover .el-table__body tr:hover>td {
    background-color: #26395b !important;
}

.el-table__body tr.current-row>td {
    background-color: #26395b !important;
}

.left-list-header {
    color: #fff;
    font-weight: 600;
}

.left-list-sub {
    color: rgba(255, 255, 255, 0.77);
    font-size: 12px;
    line-height: 18px;
}

.flag-container {
    display: inline-block;
    float: right;
    margin-right: -20px;
    margin-top: -10px;
}


label#id-1 span {
    color: #b8e986 !important;
}

label#id-2 span {
    color: #b5e5fe !important;
}

label#id-3 span {
    color: #ffcd50 !important;
}

label#id-4 span {
    color: #f96b6c !important;
}

.list-1 {
    background-color: #6e8e6a !important;
    transition: 0.3s;
}
.list-2 {
    background-color: #5e7aa4 !important;
    transition: 0.3s;
}
.list-3 {
    background-color: #917c4e !important;
    transition: 0.3s;
}
.list-4 {
    background-color: #92505e !important;
    transition: 0.3s;
}

.list-item:hover .list-1.session-listitem, .list-item.hover .list-1.session-listitem {
    background: #91b98c !important;
}
.list-item:hover .list-1.list-item-btn, .list-item.hover .list-1.list-item-btn {
    background: #91b98c !important;
}

.list-item:hover .list-2.session-listitem, .list-item.hover .list-2.session-listitem {
    background: #7495c7  !important;
}
.list-item:hover .list-2.list-item-btn, .list-item.hover .list-2.list-item-btn {
    background: #7495c7 !important;
}

.list-item:hover .list-3.session-listitem, .list-item.hover .list-3.session-listitem {
    background: #bba167  !important;
}
.list-item:hover .list-3.list-item-btn, .list-item.hover .list-3.list-item-btn {
    background: #bba167 !important;
}

.list-item:hover .list-4.session-listitem, .list-item.hover .list-4.session-listitem {
    background: #b36374  !important;
}
.list-item:hover .list-4.list-item-btn, .list-item.hover .list-4.list-item-btn {
    background: #b36374 !important;
}

.list-1.session-listitem {
    background-color: #6e8e6a !important;
}

.session-info {
    cursor: pointer;
    color: #fff;
    border: 1px solid white;
    padding: 3px 6px;
    font-size: 9px;
    border-radius: 50%;
}

.list-item {
    padding: 0px;
    border-radius: 3px;
    /*margin-bottom: 10px;*/
    color: #fff;
    width: 100%;
    display: inline-block;
}

.list-item-btn {
    padding: 10px;
    border-radius: 3px;
    margin-bottom: 10px;
    color: #fff;
    width: 6%;
    display: inline-block;
    text-align: center;
    cursor: pointer;
}


.list-item-btn span {
    font-size: 14px;
}
.left-list-badge-icon {
    font-size: 20px;
}

.el-badge.item {
    padding-left: 20px;
}

.el-badge__content.is-fixed {
    left: -3px !important;
}

.el-badge__content {
    background-color: #83b4ff !important;
    color: #15254b !important;
    font-size: 9px !important;
    height: 16px !important;
    width: 16px !important;
    padding: 0 !important;
    border: none !important;
}

.el-input__inner {
    border: 1px solid rgba(220, 223, 230, 0.35) !important;
    color: #d6d6d6 !important;
}

button.el-button.plain {
    border: 1px solid rgba(220, 223, 230, 0.35) !important;
    background-color: transparent !important;
    transition: 0.3s;
}

button.el-button.plain:hover {
    background-color: #293f5d !important

}

span.dbl-border.el-avatar.el-avatar--circle {
    border-radius: 50% !important;
    /* border: 1px solid #fff; */
    /* box-shadow: 0 0 0 4px #817dd1, 0 0 0 4px #b551a9; */
    box-shadow: 0 0 0 5px #293f5d, 0 0 0 6px #9ecaff !important;
}



/*right column*/

.right-detail-header {
    color: #9ecaff;
    font-size: 30px !important;
    margin-top: 5px;
    display: inline-block;
}


.transition-box {
    margin-bottom: 10px;
    width: 200px;
    height: 100px;
    border-radius: 4px;
    background-color: #409EFF;
    text-align: center;
    color: #fff;
    padding: 40px 20px;
    box-sizing: border-box;
    margin-right: 20px;
}
.right-detail-sub {
    display: inline-block;
    color: rgba(255, 255, 255, 0.77);
    padding: 13px 0 0 0;
}

.right-detail-btnprofile {
    cursor: pointer;
    display: inline-block;
    color: #9ecaff;
    border: 2px solid #9ecaff;
    padding: 2px 8px;
    text-align: center;
    border-radius: 50%;
    font-size: 15px;
    margin-top: 9px;
    position: absolute;
    margin-left: 16px;
    transition: 0.3s;
}

.right-detail-btnprofile:hover {
    color: #bfdcff;
    border-color: #bfdcff;
}

.right-list-container {
    display: inline-block;
    width: 80%;
    padding: 15px 0 15px;
}

.btn-buy-session {
    background-color: transparent !important;
    color: #9ecaff !important;
    border-color: #9ecaff !important;
    transition: 0.3s;
}

.btn-buy-session:hover {
    background-color: rgba(140, 175, 227, 0.30196078431372547) !important;
    color: #9ecaff !important;
    border-color: #9ecaff !important;
}


.session-listitem {
    padding: 10px;
    width: 89%;
    display: inline-block;
    border-radius: 3px;
}

.el-checkbox:last-of-type {
    margin-right: 21px !important;
    padding: 20px 0 15px !important;
}

.session-list-time {
    font-size: 14px;
    margin-left: 40px;
    margin-right: 10px;

}

span.session-list-avatar.el-avatar.el-avatar--circle {
    height: 17px !important;
    width: 18px !important;
    line-height: 22px !important;
    /* position: absolute !important; */
    margin-top: -3px !important;
    margin-left: 11px !important;
}
/* ... */

